Fix Bug #55703(PHP crash when calling mysqli_fetch_fields) Since the catalog values always is "def" now, see http://dev.mysql.com/doc/refman/5.0/en/c-api-data-structures.html